clusters/production/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: jellystat
  selector:
    app: jellystat
